--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ google-api-python-client = "*"
 google-auth = "*"
 google-auth-oauthlib = "*"
 google-auth-httplib2 = "*"
+plotly = "*"
 
 [requires]
 python_version = "3.7"
