--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ google-api-python-client = "*"
 google-auth = "*"
 google-auth-oauthlib = "*"
 google-auth-httplib2 = "*"
+cloudwatch-fluent-metrics = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
