--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,28 +1,60 @@
-workflow "Build and deploy on push" {
-  on = "push"
-  resolves = ["GitHub Action for AWS"]
-}
+# This workflow will build and push a new container image to Amazon ECR,
+# and then will deploy a new task definition to Amazon ECS, on every push
+# to the master branch.
 
-action "Docker Registry Login" {
-  uses = "actions/docker/login@master"
-  secrets = ["DOCKER_USERNAME", "DOCKER_PASSWORD"]
-}
+on:
+  push:
+    branches:
+      - master
 
-action "Docker Build" {
-  uses = "actions/docker/cli@master"
-  needs = ["Docker Registry Login"]
-  args = "build -t scottbrenner/hqtrackbot ."
-}
+name: Deploy to Amazon ECS
 
-action "Docker Push" {
-  uses = "actions/docker/cli@master"
-  needs = ["Docker Build"]
-  args = "push scottbrenner/hqtrackbot:latest"
-}
+env:
+  IMAGE_NAME: hqtrackbot
 
-action "GitHub Action for AWS" {
-  uses = "actions/aws/cli@master"
-  needs = ["Docker Push"]
-  args = "--region us-west-1 ecs update-service --cluster hqtrackbot --service hqtrackbot --task-definition hqtrackbot --force-new-deployment"
-  secrets = ["AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY"]
-}
+jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-1
+
+    - name: Build image
+      run: docker build . --file Dockerfile --tag image
+
+    - name: Log into registry
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u scottbrenner --password-stdin
+
+    - name: Push image
+      run: |
+        IMAGE_ID=scottbrenner/$IMAGE_NAME
+
+        # Strip git ref prefix from version
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+        # Strip "v" prefix from tag name
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+        # Use Docker `latest` tag convention
+        [ "$VERSION" == "master" ] && VERSION=latest
+
+        echo IMAGE_ID=$IMAGE_ID
+        echo VERSION=$VERSION
+
+        docker tag image $IMAGE_ID:$VERSION
+        docker push $IMAGE_ID:$VERSION
+        echo "::set-output name=image::$IMAGE_ID:$VERSION"
+
+    - name: Deploy to Amazon ECS task definition
+      run: |
+        pip install boto3
+        aws --region us-west-1 ecs update-service --cluster hqtrackbot --service hqtrackbot --task-definition hqtrackbot --force-new-deployment
